--- a/src/app/views/mine/login/login.component.html
+++ b/src/app/views/mine/login/login.component.html
@@ -1,25 +1,27 @@
-<!-- <form [formGroup]="loginForm" #LoginForm="ngForm"> -->
-<form>
+<form [formGroup]="signInForm" (ngSubmit)="submitForm()">
     <div class="caixa">
 
         <h3>Login</h3>
 
         <div class="username">
             <label>Username</label>
-            <input formControlName="username" name="username" id="username" type="text" placeholder="Username" autocomplete="off">
+            <input formControlName="username" name="username" id="username" type="text" placeholder="Username" autocomplete="off"
+            [ngClass]="{'is-invalid': errorControl['username'].errors?.['required'] && isSubmitted}">
+            <span class="invalid-error" *ngIf="errorControl['username'].errors?.['required'] && isSubmitted">
+                Campo Obrigatório
+            </span>
         </div>
 
         <div class="senha">
             <label>Senha</label>
-            <input formControlName="senha" name="senha" id="senha" type="password" placeholder="Senha" autocomplete="off">
+            <input formControlName="senha" name="senha" id="senha" type="password" placeholder="Senha" autocomplete="off"
+            [ngClass]="{'is-invalid': errorControl['senha'].errors?.['required'] && isSubmitted}">
+            <span class="invalid-error" *ngIf="errorControl['senha'].errors?.['required'] && isSubmitted">
+                Campo Obrigatório
+            </span>
         </div>
 
-        <!--[disabled]="!loginForm.valid" no botao login-->
-
-
-        <!-- <button (click)="login()" type="submit" class="login">Login</button> -->
-
-        <button routerLink="mine/registar" type="submit" class="registar">Registar</button>
+        <button type="submit" class="registar">Registar</button>
 
     </div>
 </form>
